syntax = "proto3";
package types;

import "types.proto";

enum QueryType {
    READ = 0;
    WRITE = 1;
}

message QueryRequestPayload {
    repeated string Queries = 1;
}

message QueryRequestHeader {
    QueryType QueryType = 2;
    NodeID NodeID = 3;
    uint64 ConnectionID = 4;
    uint64 SeqNo = 5;
    int64 Timestamp = 6;
    uint64 BatchCount = 7;
    Hash QueriesHash = 8;
}

message SignedQueryRequestHeader {
    QueryRequestHeader Header = 1;
    Hash HeaderHash = 2;
    PublicKey Signee = 3;
    Signature Signature = 4;
}

message QueryRequest {
    SignedQueryRequestHeader Header = 1;
    QueryRequestPayload Payload = 2;
}

message QueryResponseRow {
    repeated bytes Values = 1;
}

message QueryResponsePayload {
    repeated string Columns = 1;
    repeated QueryResponseRow Rows = 2;
}

message QueryResponseHeader {
    SignedQueryRequestHeader Request = 1;
    NodeID NodeID = 2;
    int64 Timestamp = 3;
    uint64 RowCount = 4;
    uint64 AffectedRowsCount = 5;
    Hash DataHash = 6;
}

message SignedQueryResponseHeader {
    QueryResponseHeader Header = 1;
    Hash HeaderHash = 2;
    PublicKey Signee = 3;
    Signature Signature = 4;
}

message QueryResponse {
    SignedQueryResponseHeader Header = 1;
    QueryResponsePayload Payload = 2;
}

message QueryAckHeader {
    SignedQueryResponseHeader Response = 1;
    NodeID NodeID = 2;
    int64 Timestamp = 3;
}

message SignedQueryAckHeader {
    QueryAckHeader Header = 1;
    Hash HeaderHash = 2;
    PublicKey Signee = 3;
    Signature Signature = 4;
}

message QueryAck {
    SignedQueryAckHeader Header = 1;
}

message NoQueryAckReportHeader {
    NodeID NodeID = 1;
    int64 Timestamp = 2;
    SignedQueryRequestHeader Request = 3;
    SignedQueryResponseHeader Response = 4;
}

message SignedNoQueryAckReportHeader {
    NoQueryAckReportHeader Header = 1;
    Hash HeaderHash = 2;
    PublicKey Signee = 3;
    Signature Signature = 4;
}

message NoQueryAckReport {
    SignedNoQueryAckReportHeader Header = 1;
}

message AggrNoQueryAckReportHeader {
    NodeID NodeID = 1;
    int64 Timestamp = 2;
    SignedQueryRequestHeader Request = 3;
    repeated SignedNoQueryAckReportHeader Reports = 4;
    bytes Peers = 5;
}

message SignedAggrNoQueryAckReportHeader {
    SignedAggrNoQueryAckReportHeader Header = 1;
    Hash HeaderHash = 2;
    PublicKey Signee = 3;
    Signature Signature = 4;
}

message SignedAggrNoQueryAckReport {
    SignedAggrNoQueryAckReportHeader Header = 1;
}